attempt to fix card remaining on hovered state on mobile

--- a/src/components/Deck.css
+++ b/src/components/Deck.css
@@ -101,8 +101,9 @@
   transform: rotateY(180deg);
 } 
 
-.flip-card-back:hover {
-  background-color: #23c433;;
-  color: white;
-  transform: rotateY(180deg);
-} 
+@media (hover: hover) {
+  .flip-card-back:hover {
+    background-color: #23c433;;
+    transform: rotateY(180deg); 
+  }
+}
